--- a/source/form.html
+++ b/source/form.html
@@ -12,141 +12,142 @@
 </head>
 
 <body class="page__body">
-  <div class="page__body-outer-wrapper">
-    <div class="page-header__wrapper">
-      <header class="page-header">
-        <img class="page-header__logo" src="/img/logo-mobile.svg" alt="Логотип Веселый кот" width="33" height="38">
-        <a class="page-header__title-link" href="index.html">
-          <picture>
-            <source media="(min-width: 1440px)" srcset="/img/logo-desktop.svg" alt="Логотип Cat Energy" width="202px" height="59px">
-            <source media="(min-width: 768px)" srcset="/img/logo-tablet.svg" alt="Логотип Cat Energy" width="174px" height="52px">
-            <img class="page-header__title-picture" src="/img/header-title.svg" alt="Логотип Cat Energy" width="101px" height="18px">
-          </picture>
-        </a>
-        <button class="page-header__toggle page-header__toggle--disabled" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
-        <nav class="main-nav main-nav--inline">
-          <ul class="main-nav__list">
-            <li class="main-nav__item">
-              <a class="main-nav__link" href="index.html">главная</a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link" href="catalog.html">каталог продукции</a>
-            </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--active" href="form.html">подбор программы</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-    </div>
+  <div class="page__wrapper">
+    <header class="page-header">
+      <img class="page-header__logo" src="/img/logo-mobile.svg" alt="Логотип Веселый кот" width="33" height="38">
+      <a class="page-header__title-link" href="index.html">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="/img/logo-desktop.svg" alt="Логотип Cat Energy" width="202px"
+            height="59px">
+          <source media="(min-width: 768px)" srcset="/img/logo-tablet.svg" alt="Логотип Cat Energy" width="174px"
+            height="52px">
+          <img class="page-header__title-picture" src="/img/header-title.svg" alt="Логотип Cat Energy" width="101px"
+            height="18px">
+        </picture>
+      </a>
+      <button class="page-header__toggle page-header__toggle--disabled" type="button">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
+      <nav class="main-nav main-nav--inline">
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="index.html">главная</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="catalog.html">каталог продукции</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link main-nav__link--active" href="form.html">подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </div>
 
-    <main class="page__main">
-      <h1 class="page__main-title visually-hidden">Форма регистрации для подбора программы Cat energy</h1>
-      <section class="bio-data">
-        <h2 class="bio-data__title">Подбор программы</h2>
-        <p class="bio-data__description">Заполните анкету, и мы подберем<br> программу питания для вашего кота</p>
-        <form class="data-form" action="https://echo.htmlacademy.ru/" method="post">
+  <main class="page__main">
+    <h1 class="page__main-title visually-hidden">Форма регистрации для подбора программы Cat energy</h1>
+    <section class="bio-data">
+      <h2 class="bio-data__title">Подбор программы</h2>
+      <p class="bio-data__description">Заполните анкету, и мы подберем<br> программу питания для вашего кота</p>
+      <form class="data-form" action="https://echo.htmlacademy.ru/" method="post">
+        <div class="data-form__container">
+          <div class="data-form__bio-and-program-wrapper">
+            <ul class="data-form__list data-form__list--underlined">
+              <li class="data-form__item">
+                <label class="data-form__label" for="name">Имя:*</label>
+                <input class="data-form__input" type="text" name="name" id="name" placeholder="Барсик" required>
+              </li>
+              <li class="data-form__item">
+                <label class="data-form__label" for="weight">Вес (КГ):*</label>
+                <input class="data-form__input" type="text" name="weight" id="weight" placeholder="7" required>
+              </li>
+              <li class="data-form__item">
+                <label class="data-form__label" for="age">Возраст (ЛЕТ):</label>
+                <input class="data-form__input" type="text" name="age" id="age" placeholder="7">
+              </li>
+            </ul>
+            <ul class="data-form__list data-form__list--underlined">
+              <li class="data-form__item">
+                <input class="data-form__radio" type="radio" name="weight-change" id="loss" value="loss" checked>
+                <label class="data-form__program-label" for="loss">Похудение</label>
+              </li>
+              <li class="data-form__item">
+                <input class="data-form__radio" type="radio" name="weight-change" id="gain" value="gain">
+                <label class="data-form__program-label" for="gain">Набор массы</label>
+              </li>
+              <li class="data-form__item">
+                <input class="data-form__radio" type="radio" name="weight-change" id="unknown" value="unknown">
+                <label class="data-form__program-label" for="unknown">Не знаю (нужен ваш совет)</label>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="data-form__contacts-wrapper data-form__contacts-wrapper--green-line">
           <div class="data-form__container">
-            <div class="data-form__bio-and-program-wrapper">
-              <ul class="data-form__list underline-list">
-                <li class="data-form__item">
-                  <label class="data-form__label" for="name">Имя:*</label>
-                  <input class="data-form__input" type="text" name="name" id="name" placeholder="Барсик" required>
-                </li>
-                <li class="data-form__item">
-                  <label class="data-form__label" for="weight">Вес (КГ):*</label>
-                  <input class="data-form__input" type="text" name="weight" id="weight" placeholder="7" required>
-                </li>
-                <li class="data-form__item">
-                  <label class="data-form__label" for="age">Возраст (ЛЕТ):</label>
-                  <input class="data-form__input" type="text" name="age" id="age" placeholder="7">
-                </li>
-              </ul>
-              <ul class="data-form__list2 underline-list">
-                <li class="data-form__item">
-                  <input class="data-form__radio" type="radio" name="weight-change" id="loss" value="loss" checked>
-                  <label class="data-form__program-label" for="loss">Похудение</label>
-                </li>
-                <li class="data-form__item">
-                  <input class="data-form__radio" type="radio" name="weight-change" id="gain" value="gain">
-                  <label class="data-form__program-label" for="gain">Набор массы</label>
-                </li>
-                <li class="data-form__item">
-                  <input class="data-form__radio" type="radio" name="weight-change" id="unknown" value="unknown">
-                  <label class="data-form__program-label" for="unknown">Не знаю (нужен ваш совет)</label>
-                </li>
-              </ul>
+            <h3 class="data-form__title">Контактные данные (владельца кота)</h3>
+            <ul class="data-form__list">
+              <li class="data-form__item">
+                <label class="data-form__label" for="email">E-mail:*</label>
+                <input class="data-form__input data-form__input--email contacts-input" type="email" name="email"
+                  id="email" placeholder="KUKLACHEV@GMAIL.COM" required>
+                <svg class="data-form__icon data-form__icon--envelope">
+                  <use xlink:href="img/icons/sprite.svg#envelope"></use>
+                </svg>
+              </li>
+              <li class="data-form__item">
+                <label class="data-form__label" for="phone">Телефон:*</label>
+                <input class="data-form__input data-form__input--phone" type="tel" name="phone" id="phone"
+                  placeholder="8 (960) 900-60-90" required pattern="^[0-9]{1} \([0-9]{3}\) [0-9]{3}-[0-9]{2}-[0-9]{2}">
+                <svg class="data-form__icon data-form__icon--phone">
+                  <use xlink:href="img/icons/sprite.svg#phone"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="data-form__comments-wrapper data-form__comments-wrapper--green-line">
+          <div class="data-form__container">
+            <h3 class="data-form__title">Комментарий</h3>
+            <div class="data-form__comments">
+              <textarea class="data-form__comment-field" name="comment"
+                placeholder="Расскажите обо всех повадках кота"></textarea>
             </div>
           </div>
-          <div class="data-form__contacts-wrapper data-form__contacts-wrapper--green-line">
-            <div class="data-form__container">
-              <h3 class="data-form__title">Контактные данные (владельца кота)</h3>
-              <ul class="data-form__list">
-                <li class="data-form__item">
-                  <label class="data-form__label" for="email">E-mail:*</label>
-                  <input class="data-form__input data-form__input--email contacts-input" type="email" name="email"
-                    id="email" placeholder="KUKLACHEV@GMAIL.COM" required>
-                  <svg class="data-form__icon data-form__icon--envelope">
-                    <use xlink:href="img/icons/sprite.svg#envelope"></use>
-                  </svg>
-                </li>
-                <li class="data-form__item">
-                  <label class="data-form__label" for="phone">Телефон:*</label>
-                  <input class="data-form__input data-form__input--phone" type="tel" name="phone" id="phone"
-                    placeholder="8 (960) 900-60-90" required
-                    pattern="^[0-9]{1} \([0-9]{3}\) [0-9]{3}-[0-9]{2}-[0-9]{2}">
-                  <svg class="data-form__icon data-form__icon--phone">
-                    <use xlink:href="img/icons/sprite.svg#phone"></use>
-                  </svg>
-                </li>
-              </ul>
+        </div>
+        <div class="data-form__extra-wrapper data-form__extra-wrapper--green-line">
+          <div class="data-form__container">
+            <h3 class="data-form__title">Дополнительно</h3>
+            <ul class="data-form__list">
+              <li class="data-form__item">
+                <input class="data-form__checkbox-input" type="checkbox" name="extras" value="sugar" id="sugar" checked>
+                <label class="data-form__checkbox-label" for="sugar">сахарозаменитель</label>
+              </li>
+              <li class="data-form__item">
+                <input class="data-form__checkbox-input" type="checkbox" name="extras" value="water" id="water">
+                <label class="data-form__checkbox-label" for="water">питьевая вода</label>
+              </li>
+              <li class="data-form__item">
+                <input class="data-form__checkbox-input" type="checkbox" name="extras" value="milk" id="milk">
+                <label class="data-form__checkbox-label" for="milk">молоко</label>
+              </li>
+              <li class="data-form__item">
+                <input class="data-form__checkbox-input" type="checkbox" name="extras" value="vitamin" id="vitamin">
+                <label class="data-form__checkbox-label" for="vitamin">витамины</label>
+              </li>
+            </ul>
+            <div class="data-form__button-wrapper">
+              <button class="data-form__button button" type="submit">Отправить заявку</button>
+              <p class="data-form__legend">* - Обязательные поля</p>
             </div>
           </div>
-          <div class="data-form__comments-wrapper data-form__comments-wrapper--green-line">
-            <div class="data-form__container">
-              <h3 class="data-form__title">Комментарий</h3>
-              <div class="data-form__comments">
-                <textarea class="data-form__comment-field" name="comment"
-                  placeholder="Расскажите обо всех повадках кота"></textarea>
-              </div>
-            </div>
-          </div>
-          <div class="data-form__extra-wrapper data-form__extra-wrapper--green-line">
-            <div class="data-form__container">
-              <h3 class="data-form__title">Дополнительно</h3>
-              <ul class="data-form__list">
-                <li class="data-form__item">
-                  <input class="data-form__checkbox-input" type="checkbox" name="extras" value="sugar" id="sugar"
-                    checked>
-                  <label class="data-form__checkbox-label" for="sugar">сахарозаменитель</label>
-                </li>
-                <li class="data-form__item">
-                  <input class="data-form__checkbox-input" type="checkbox" name="extras" value="water" id="water">
-                  <label class="data-form__checkbox-label" for="water">питьевая вода</label>
-                </li>
-                <li class="data-form__item">
-                  <input class="data-form__checkbox-input" type="checkbox" name="extras" value="milk" id="milk">
-                  <label class="data-form__checkbox-label" for="milk">молоко</label>
-                </li>
-                <li class="data-form__item">
-                  <input class="data-form__checkbox-input" type="checkbox" name="extras" value="vitamin" id="vitamin">
-                  <label class="data-form__checkbox-label" for="vitamin">витамины</label>
-                </li>
-              </ul>
-              <div class="data-form__button-wrapper">
-                <button class="data-form__button button" type="submit">Отправить заявку</button>
-                <p class="data-form__legend">* - Обязательные поля</p>
-              </div>
-            </div>
-          </div>
-        </form>
-      </section>
-    </main>
+        </div>
+      </form>
+    </section>
+  </main>
 
-    <footer class="page__footer">
-      <section class="footer-contacts footer-contacts--white-background">
+  <footer class="page__footer">
+    <section class="footer-contacts footer-contacts--white-background">
+      <div class="footer-contact__outer-wrapper">
         <div class="footer-contacts__wrapper">
           <h2 class="visually-hidden">Контакты</h2>
           <p class="footer-contacts__invitation">приглашаем <br> к сотрудничеству дилеров!</p>
@@ -155,53 +156,53 @@
             <address class="footer-contacts__address">Санкт-Петербург</address>
           </div>
         </div>
-        <iframe class="footer-contacts__map"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6044350650561!2d30.32194232853899!3d59.938705733169!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1643231784919!5m2!1sru!2sua"
-          allowfullscreen="" loading="lazy"></iframe>
-      </section>
-      <section class="footer-media">
-        <div class="footer-media__wrapper">
-          <h2 class="visually-hidden">Медиа и социальные сети</h2>
-          <a class="footer-media__logo" href="index.html">
-            <img class="footer-media__logo-title" src="/img/header-title.svg" alt="Баннер Cat Energy" width="128"
-              height="24">
-          </a>
-          <ul class="social">
-            <li class="social__item social__item--first">
-              <a class="social__link" href="">
-                <svg class="social__logo social__logo--vk">
-                  <use xlink:href="img/icons/sprite.svg#vk-logo-big"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social__item">
-              <a class="social__link" href="">
-                <svg class="social__logo social__logo--insta">
-                  <use xlink:href="img/icons/sprite.svg#insta-logo-big"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social__item social__item--last">
-              <a class="social__link" href="">
-                <svg class="social__logo social__logo--fb">
-                  <use xlink:href="img/icons/sprite.svg#fb-logo-big"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-          <div class="footer-media__HTML-academy-wrapper">
-            <a class="footer-media__HTML-academy"
-              href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">
-              <span class="footer-media__HTML-academy-label">HTML Academy</span>
-              <svg class="footer-media__HTML-academy-logo">
-                <use xlink:href="img/icons/sprite.svg#html-academy-logo"></use>
+      </div>
+      <iframe class="footer-contacts__map"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6044350650561!2d30.32194232853899!3d59.938705733169!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1643231784919!5m2!1sru!2sua"
+        allowfullscreen="" loading="lazy"></iframe>
+    </section>
+    <section class="footer-media">
+      <div class="footer-media__wrapper">
+        <h2 class="visually-hidden">Медиа и социальные сети</h2>
+        <a class="footer-media__logo" href="index.html">
+          <img class="footer-media__logo-title" src="/img/header-title.svg" alt="Баннер Cat Energy" width="128"
+            height="24">
+        </a>
+        <ul class="social">
+          <li class="social__item social__item--first">
+            <a class="social__link" href="">
+              <svg class="social__logo social__logo--vk">
+                <use xlink:href="img/icons/sprite.svg#vk-logo-big"></use>
               </svg>
             </a>
-          </div>
+          </li>
+          <li class="social__item">
+            <a class="social__link" href="">
+              <svg class="social__logo social__logo--insta">
+                <use xlink:href="img/icons/sprite.svg#insta-logo-big"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social__item social__item--last">
+            <a class="social__link" href="">
+              <svg class="social__logo social__logo--fb">
+                <use xlink:href="img/icons/sprite.svg#fb-logo-big"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <div class="footer-media__HTML-academy-wrapper">
+          <a class="footer-media__HTML-academy"
+            href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">
+            <span class="footer-media__HTML-academy-label">HTML Academy</span>
+            <svg class="footer-media__HTML-academy-logo">
+              <use xlink:href="img/icons/sprite.svg#html-academy-logo"></use>
+            </svg>
+          </a>
         </div>
-      </section>
-    </footer>
-  </div>
+      </div>
+    </section>
+  </footer>
 
   <script>
     var navMain = document.querySelector('.main-nav');
