--- a/source/index.html
+++ b/source/index.html
@@ -12,16 +12,19 @@
 </head>
 
 <body class="page__body">
-  <div class="page-header__wrapper">
+  <div class="page__wrapper">
     <header class="page-header">
       <a class="page-header__logo-link" href="index.html">
         <img class="page-header__logo" src="/img/logo-mobile.svg" alt="Логотип Веселый кот" width="33" height="38">
       </a>
       <a class="page-header__title-link" href="index.html">
         <picture>
-          <source media="(min-width: 1440px)" srcset="/img/logo-desktop.svg" alt="Логотип Cat Energy" width="202px" height="59px">
-          <source media="(min-width: 768px)" srcset="/img/logo-tablet.svg" alt="Логотип Cat Energy" width="174px" height="52px">
-          <img class="page-header__title-picture" src="/img/header-title.svg" alt="Логотип Cat Energy" width="101px" height="18px">
+          <source media="(min-width: 1440px)" srcset="/img/logo-desktop.svg" alt="Логотип Cat Energy" width="202px"
+            height="59px">
+          <source media="(min-width: 768px)" srcset="/img/logo-tablet.svg" alt="Логотип Cat Energy" width="174px"
+            height="52px">
+          <img class="page-header__title-picture" src="/img/header-title.svg" alt="Логотип Cat Energy" width="101px"
+            height="18px">
         </picture>
       </a>
       <button class="page-header__toggle page-header__toggle--disabled" type="button">
@@ -45,7 +48,7 @@
 
   <main class="page__main">
     <h1 class="page__title visually-hidden">Cat Energy - функциональное питание для котов</h1>
-    <div class="product-info__outer-wrapper">
+    <div class="page__outer-wrapper">
       <section class="product-info">
         <div class="product-info__wrapper">
           <div class="product-info__content">
@@ -81,7 +84,7 @@
         </div>
       </section>
     </div>
-    <div class="advantages__wrapper">
+    <div class="page__container">
       <section class="advantages">
         <h2 class="advantages__title section-title">Как это работает</h2>
         <ul class="advantages__list">
@@ -117,6 +120,7 @@
         </ul>
       </section>
     </div>
+
     <section class="example">
       <div class="example__wrapper">
         <div class="example__text-wrapper">
@@ -146,26 +150,39 @@
         </div>
         <div class="example__slider slider">
           <div class="slider__cat-image-wrapper">
-            <span class="slider__cat-image-fat"></span>
-            <span class="slider__cat-image-slim"></span>
+            <picture>
+              <source media="(min-width: 768px)" srcset="/img/cat-fat-tablet.png" alt="Фото кота до" width="296px"
+                height="511px">
+              <img class="slider__cat-image-fat" src="/img/before-mobile1.png" alt="Фото кота до" width="280px"
+                height="232px">
+            </picture>
+            <picture>
+              <source media="(min-width: 768px)" srcset="/img/cat-slim-tablet.png" alt="Фото кота после" width="296px"
+                height="511px">
+              <img class="slider__cat-image-slim" src="/img/before-mobile1.png" alt="Фото кота после" width="280px"
+                height="232px">
+            </picture>
           </div>
           <div class="slider__wrapper">
-            <span class="slider__text">Было</span>
+            <button class="slider__text" type="button">Было</button>
             <button class="slider__button" type="button"></button>
-            <span class="slider__text">Стало</span>
+            <button class="slider__text" type="button">Стало</button>
           </div>
         </div>
       </div>
     </section>
+
   </main>
   <footer class="page__footer">
     <section class="footer-contacts">
-      <div class="footer-contacts__wrapper">
-        <h2 class="visually-hidden">Контакты</h2>
-        <p class="footer-contacts__invitation">приглашаем <br> к сотрудничеству дилеров!</p>
-        <div class="footer-contacts__address-wrapper">
-          <address class="footer-contacts__address">ул. Большая Конюшенная, д. 19/8</address>
-          <address class="footer-contacts__address">Санкт-Петербург</address>
+      <div class="footer-contact__outer-wrapper">
+        <div class="footer-contacts__wrapper">
+          <h2 class="visually-hidden">Контакты</h2>
+          <p class="footer-contacts__invitation">приглашаем <br> к сотрудничеству дилеров!</p>
+          <div class="footer-contacts__address-wrapper">
+            <address class="footer-contacts__address">ул. Большая Конюшенная, д. 19/8</address>
+            <address class="footer-contacts__address">Санкт-Петербург</address>
+          </div>
         </div>
       </div>
       <iframe class="footer-contacts__map"
